@@ -1,0 +1,4 @@
+brew 'make'
+brew 'cmake'
+brew 'openssl'
+brew 'qt@5'
