@@ -1,0 +1,11 @@
+<?xml version="1.0" encoding="utf-8"?>
+
+<!-- install with: choco install Chocolatey.config -y -->
+<packages>
+  <package id="cmake" />
+  <package id="ninja" />
+
+  <!-- lock openssl to 3.1.1. as of 19th jan 2024, 3.2.0 breaks cmake configure. -->
+  <package id="openssl" version="3.1.1" />
+
+</packages>
