@@ -2,25 +2,56 @@
 
 This is the open source core component of Synergy, a keyboard and mouse sharing tool.
 
-## Recommended
+* [Download Synergy](https://symless.com/synergy/download)
+* [Contact support](https://symless.com/synergy/contact)
+* [Help articles](https://symless.com/synergy/help)
 
-Things most people will need.
+## Developer quick start
 
-* [Download](https://symless.com/synergy/download) - Get the compiled version of Synergy 3 and Synergy 1.
-* [Contact Support](https://symless.com/contact-support) - Open a support ticket and talk directly to the Synergy team.
-* [Help Guides](https://symless.com/help) - Self-help guides and information for when you don't want to talk to people.
-* [Symless Blog](https://symless.com/blog/) - Find out what's happening at Symless and with Synergy development.
+Simplified instructions for those who want to contribute to development of Synergy Core.
 
-## Advanced Users
+You'll also need to read the 
+[quick start companion](https://github.com/symless/synergy-core/wiki/Quick-start-companion)
+which contains essential instructions.
+
+**Dependencies:**
+```
+python scripts/install_deps.py
+```
+
+**Configure:**
+
+*Windows:*
+```
+cmake -B build --preset=windows-release
+```
+
+*macOS:*
+```
+cmake -B build --preset=macos-release
+```
+
+*Linux:*
+```
+cmake -B build --preset=linux-release
+```
+
+**Build:**
+```
+cmake --build build
+```
+
+**Test:**
+```
+./build/bin/unittests
+```
+
+## Developer resources
 
 For people who want to contribute to the development of Synergy.
 
-* [Getting Started](https://github.com/symless/synergy-core/wiki/Getting-Started) - How to checkout the code from git and use the right branch.
+* [Getting started](https://github.com/symless/synergy-core/wiki/Getting-Started) - How to checkout the code from git and use the right branch.
 * [Compiling](https://github.com/symless/synergy-core/wiki/Compiling) - Instructions on how to compile Synergy Core from source.
-* [Text Config](https://github.com/symless/synergy-core/wiki/Text-Config) - Write a text config file when running Synergy Core manually.
-* [Command Line](https://github.com/symless/synergy-core/wiki/Command-Line) - Go full manual and run Synergy Core from the command line.
-
-## Synergy Vintage
-
-For vintage computer enthusiasts, [Synergy Vintage](https://github.com/nbolton/synergy-vintage) aims to keep the origins of Synergy alive.
-You can use Synergy Vintage on operating systems available from 1995 to 2006.
+* [Text config](https://github.com/symless/synergy-core/wiki/Text-Config) - Write a text config file when running Synergy Core manually.
+* [Command line](https://github.com/symless/synergy-core/wiki/Command-Line) - Go full manual and run Synergy Core from the command line.
+* [Synergy Vintage](https://github.com/nbolton/synergy-vintage) - Use Synergy on operating systems available between 1995 and 2006.
