@@ -31,6 +31,7 @@ Enhancements:
 - #7334 Implement hello back in IPC protocol
 - #7335 Clickable debug source paths and new launch target
 - #7336 Add C++ and LLDB to VS Code recommendations
+- #7351 Use deps script to make life easier for contribs
 
 # 1.14.6
 
